# wasm-fileupload

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
assets/: main.css
src/: lib.rs  main.rs
tests/: web.rs
